# edist-temptative

./: .gitignore  README.md  adp.pyx  adp_test.py  aed_test.py  bedl_demo.ipynb  bedl_test.py  cython_compile.sh  cython_setup.py  dtw.pyx  dtw_demo.ipynb  dtw_pure_python.py  dtw_test.py  edits_test.py  grammar.py  grammar_test.py  main.py  multiprocess.py  multiprocess_test.py  pyproject.toml  sed_demo.ipynb  sed_test.py  setup.py  ted_test.py  trace.py  tree_edits_test.py  tree_utils_test.py
docs/: requirements.txt
docs/source/: adp.rst  aed.rst  alignment.rst  bedl.rst  conf.py  dtw.rst  edits.rst  index.rst  multiprocess.rst  sed.rst  seted.rst  ted.rst  tree_edits.rst  tree_utils.rst  uted.rst
edist/: adp.pyx  aed.py  alignment.py  bedl.py  dtw.pyx  edits.py  multiprocess.py  sed.pyx  seted.pyx  ted.pyx  tree_edits.py  tree_utils.py  uted.pyx
notebooks/: dtw_demo.ipynb  sed_demo.ipynb
tests/: adp_test.py  aed_test.py  bedl_test.py  dtw_test.py  edits_test.py  grammar_test.py  multiprocess_test.py  sed_test.py  seted_test.py  ted_test.py  tree_edits_test.py  tree_utils_test.py  uted_test.py
